2022-11-16T16:26:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3481187714 # 234
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 86 240 / 91 246
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 91 248
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-02] / [2022-11-16]

2022-11-16T08:27:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3477625756 # 233
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 86 240 / 90 245
* notice: next accum: outdated-unq outdated-all / unq all: 86 240 / 91 246
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-16T01:46:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3475674881 # 232
* notice: last 14d: unq all: 1 5
* notice: prev accum: outdated-unq outdated-all / unq all: 85 237 / 90 244
* notice: next accum: outdated-unq outdated-all / unq all: 86 240 / 90 245
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2022-11-01] / [2022-11-02]

2022-11-15T16:28:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3472281456 # 231
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 85 237 / 90 244
* notice: next accum: outdated-unq outdated-all / unq all: 85 237 / 90 244
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]

2022-11-15T08:26:55Z: