@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-16T16:26:45Z",
+  "timestamp" : "2022-11-17T08:26:29Z",
   "count_outdated" : 242,
   "uniques_outdated" : 87,
-  "count" : 248,
-  "uniques" : 91,
+  "count" : 249,
+  "uniques" : 92,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-11-16T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
